[workspace]
resolver = "2"
members = [
    "rsqlite",
    "rsqlite-macros",
    "rsqlite-macros-internals"
]

[workspace.package]
version = "0.1.0"
authors = ["koito"]
description = "More comfortable using sqlite"
rust-version = "1.78.0"

[workspace.dependencies]
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false }
