[package]
name = "rsqlite-macros-internals"
version.workspace = true
authors.workspace = true
description.workspace = true
rust-version.workspace = true
edition = "2021"

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["clone-impls", "derive", "parsing", "printing"] }
